--- a/res/css/views/audio_messages/_AudioPlayer.scss
+++ b/res/css/views/audio_messages/_AudioPlayer.scss
@@ -15,14 +15,12 @@ limitations under the License.
 */
 
 .mx_MediaBody.mx_AudioPlayer_container {
-    padding: 16px 12px 12px 12px;
+    @mixin AudioPlayer;
+
+    padding-top: $spacing-16;
 
     .mx_AudioPlayer_primaryContainer {
         display: flex;
-
-        .mx_PlayPauseButton {
-            margin-right: 8px;
-        }
 
         .mx_AudioPlayer_mediaInfo {
             flex: 1;
@@ -39,7 +37,7 @@ limitations under the License.
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 overflow: hidden;
-                padding-bottom: 4px; // mimics the line-height differences in the Figma
+                padding-bottom: $spacing-4; // mimics the line-height differences in the Figma
             }
 
             .mx_AudioPlayer_byline {
@@ -52,16 +50,5 @@ limitations under the License.
     .mx_AudioPlayer_seek {
         display: flex;
         align-items: center;
-
-        .mx_SeekBar {
-            flex: 1;
-        }
-
-        .mx_Clock {
-            min-width: $font-42px; // for flexbox
-            padding-left: $spacing-4; // isolate from seek bar
-            text-align: justify;
-            white-space: nowrap;
-        }
     }
 }
