--- a/res/css/views/audio_messages/_PlaybackContainer.scss
+++ b/res/css/views/audio_messages/_PlaybackContainer.scss
@@ -19,9 +19,7 @@ limitations under the License.
 
 // Container for live recording and playback controls
 .mx_MediaBody.mx_VoiceMessagePrimaryContainer {
-    // The waveform (right) has a 1px padding on it that we want to account for, otherwise
-    // inherit from mx_MediaBody
-    padding-right: 11px;
+    @mixin AudioPlayer;
 
     // Cheat at alignment a bit
     display: flex;
@@ -29,8 +27,9 @@ limitations under the License.
 
     contain: content;
 
-    // Waveforms are present in live recording only
     .mx_Waveform {
+        flex: 1; // Keep space for waveforms
+
         .mx_Waveform_bar {
             background-color: $quaternary-content;
             height: 100%;
@@ -45,23 +44,13 @@ limitations under the License.
         }
     }
 
-    .mx_Clock {
-        width: $font-42px; // we're not using a monospace font, so fake it
-        min-width: $font-42px; // force sensible layouts in awkward flexboxes (file panel, for example)
-        padding-right: 6px; // with the fixed width this ends up as a visual 8px most of the time, as intended.
-        padding-left: 8px; // isolate from recording circle / play control
-    }
-
     .mx_RecordingPlayback_timelineLayoutMiddle {
-        margin-left: 8px;
-        margin-right: 6px;
         position: relative;
-        display: inline-block;
+        display: flex;
         flex: 1;
         height: 30px; // same height as mx_Waveform, needed for automatic vertical centering
 
         .mx_Waveform {
-            position: absolute;
             left: 0;
             top: 0;
         }
@@ -70,7 +59,6 @@ limitations under the License.
             position: absolute;
             left: 0;
             height: 30px;
-            top: -2px; // visually vertically centered
 
             // Hide the hairline progress bar since we're at 100% height. Need to have distinct rules
             // because CSS is weird.
@@ -97,13 +85,17 @@ limitations under the License.
                 background-color: transparent;
             }
         }
+    }
+}
 
-        // For timeline-rendered playback, the clock is on the other side of the waveform.
-        & + .mx_Clock {
-            text-align: right;
+.mx_MessageComposer_controls {
+    .mx_Waveform {
+        margin-inline-start: $spacing-8;
+    }
 
-            // Take the padding off the clock because it's accounted for by the `timelineLayoutMiddle`
-            padding: 0;
-        }
+    .mx_VoiceMessagePrimaryContainer {
+        // The waveform (right) has a 1px padding on it that we want to account for, otherwise
+        // inherit from mx_MediaBody
+        padding-right: 11px;
     }
 }
